tests/ui/async-await/in-trait/unconstrained-impl-region.stderr
error[E0277]: the trait bound `impl Inbox<&'a ()>: Inbox<&'a ()>` is not satisfied
  --> $DIR/unconstrained-impl-region.rs:16:5
   |
LL |     async fn on_mount(self, _: impl Inbox<&'a ()>) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Inbox<&'a ()>` is not implemented for `impl Inbox<&'a ()>`
   |
note: required by a bound in `<() as Actor>::on_mount`
  --> $DIR/unconstrained-impl-region.rs:16:37
   |
LL |     async fn on_mount(self, _: impl Inbox<&'a ()>) {}
   |                                     ^^^^^^^^^^^^^ required by this bound in `<() as Actor>::on_mount`
help: consider further restricting this bound
   |
LL |     async fn on_mount(self, _: impl Inbox<&'a ()> + Inbox<&'a ()>) {}
   |                                                   +++++++++++++++

error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-impl-region.rs:13:6
   |
LL | impl<'a> Actor for () {
   |      ^^ unconstrained lifetime parameter

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0207, E0277.
For more information about an error, try `rustc --explain E0207`.
